# game-of-life

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  expected.txt
include/: apple.h  templates.h
include/GLFW/: glfw3.h
include/glad/: glad.h
include/nlohmann/: json.hpp
src/: CMakeLists.txt  board.hpp  config.json  ex.json  game.cpp  game.hpp  glad.c  main.cpp  main.cpp.bk  test.cpp
tests/: CMakeLists.txt  game_test.cpp  main_test.cpp
